manifests/staging/apps/actual/gateway.networking.k8s.io_v1_gateway_actual-cloudflare-staging.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: actual-cloudflare-staging
  namespace: actual
spec:
  gatewayClassName: cloudflare
  listeners:
  - hostname: actual.staging.seigra.net
    name: http
    port: 80
    protocol: HTTP
