manifests/staging/apps/actual/gateway.networking.k8s.io_v1_gateway_actual.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual
  namespace: actual
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - hostname: actual.staging.seigra.net
    name: actual
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: actual-gateway-tls
      mode: Terminate
