manifests/staging/apps/actual/gateway.networking.k8s.io_v1_httproute_actual.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual
  namespace: actual
spec:
  hostnames:
  - actual.staging.seigra.net
  parentRefs:
  - name: actual
  - name: actual-cloudflare-staging
  rules:
  - backendRefs:
    - name: actual-server
      port: 80
